<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".QuestionEditActivity">

    <!-- "Q" label. -->
    <TextView
        android:id="@+id/question_label_text_view"
        style="@style/QALabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/question_edit_text"
        android:text="@string/question_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Question text EditText. -->
    <EditText
        android:id="@+id/question_edit_text"
        style="@style/QAEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/question_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/answer_edit_text"
        app:layout_constraintLeft_toRightOf="@id/question_label_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/question_label_text_view" />

    <!-- "A" label. -->
    <TextView
        android:id="@+id/answer_label_text_view"
        style="@style/QALabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/answer_edit_text"
        android:text="@string/answer_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/answer_edit_text" />

    <!-- Answer EditText. -->
    <EditText
        android:id="@+id/answer_edit_text"
        style="@style/QAEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/answer_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/answer_label_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_edit_text" />

    <!-- "Save Question" FloatingActionButton. -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/save_question"
        android:onClick="saveButtonClick"
        android:src="@drawable/check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>